refactoring, updateing swagger file
