# src/AppBundle/Controller/ListController.php
@@ -3,8 +3,8 @@
 namespace AppBundle\Controller;
 
 use AppBundle\AppBundle;
-use AppBundle\Entity\Calendar;
-use AppBundle\Entity\CalList;
+use AppBundle\Entity\Task;
+use AppBundle\Entity\TaskList;
 use AppBundle\Model\Raster;
 use JMS\Serializer\Serializer;
 use Libern\QRCodeReader\lib\QrReader;
@@ -25,9 +25,9 @@ class ListController extends Controller
      */
     public function getListsAction() {
         $em = $this->getDoctrine()->getManager();
-        $db_list = $em->getRepository('AppBundle:CalList')->findAll();
+        $db_list = $em->getRepository('AppBundle:TaskList')->findAll();
 
-        if (!$db_list) return new Response('fail', 500);
+        if (!$db_list) return TaskController::jsonError('could not load lists', 500);
 
         $serializer = $this->get('jms_serializer');
         return new Response($serializer->serialize($db_list, 'json'), 200, ['Content-Type' => "application/json", 'Access-Control-Allow-Origin' => '*']);
@@ -39,9 +39,9 @@ class ListController extends Controller
      */
     public function getListAction($id) {
         $em = $this->getDoctrine()->getManager();
-        $db_list = $em->getRepository('AppBundle:CalList')->find($id);
+        $db_list = $em->getRepository('AppBundle:TaskList')->find($id);
 
-        if (!$db_list) return new Response('fail', 500);
+        if (!$db_list) return TaskController::jsonError('no list with id ' . $id, 404);
 
         $serializer = $this->get('jms_serializer');
         return new Response($serializer->serialize($db_list, 'json'), 200, ['Content-Type' => "application/json", 'Access-Control-Allow-Origin' => '*']);
@@ -57,9 +57,9 @@ class ListController extends Controller
             $parametersAsArray = json_decode($content, true);
         }
 
-        if (count($parametersAsArray) == 0) return new Response('fail', 500);
+        if (count($parametersAsArray) == 0) return TaskController::jsonError('invalid json', 400);
 
-        $list = new CalList();
+        $list = new TaskList();
         $list->setTitle($parametersAsArray['title']);
 
         $em = $this->getDoctrine()->getManager();
@@ -67,26 +67,26 @@ class ListController extends Controller
         $em->flush();
 
         $serializer = $this->get('jms_serializer');
-        return new Response($serializer->serialize($list, 'json'), 200, ['Content-Type' => "application/json", 'Access-Control-Allow-Origin' => '*']);
+        return new Response($serializer->serialize($list, 'json'), 201, ['Content-Type' => "application/json", 'Access-Control-Allow-Origin' => '*']);
     }
 
     /**
      * @Route("/api/list/{id}", name="update_list")
-     * @Method("PATCH")
+     * @Method("PUT")
      */
-    public function updateList($id, Request $request) {
+    public function updateListAction($id, Request $request) {
         $parametersAsArray = [];
         if ($content = $request->getContent()) {
             $parametersAsArray = json_decode($content, true);
         }
 
-        if (count($parametersAsArray) == 0) return new Response('fail', 500);
+        if (count($parametersAsArray) == 0) return TaskController::jsonError('invalid json', 400);
         $title = $parametersAsArray['title'];
 
         $em = $this->getDoctrine()->getManager();
-        $db_list = $em->getRepository('AppBundle:CalList')->find($id);
+        $db_list = $em->getRepository('AppBundle:TaskList')->find($id);
 
-        if (!$db_list) return new Response('fail', 500);
+        if (!$db_list) return TaskController::jsonError('no list with id ' . $id, 404);
 
         $db_list->setTitle($title);
         $em->flush();
@@ -101,24 +101,30 @@ class ListController extends Controller
      */
     public function deleteListAction($id) {
         $em = $this->getDoctrine()->getManager();
-        $db_list = $em->getRepository('AppBundle:CalList')->find($id);
+        $db_list = $em->getRepository('AppBundle:TaskList')->find($id);
 
-        if (!$db_list) return new Response('fail', 500);
+        if (!$db_list) return TaskController::jsonError('no list with id ' . $id, 404);
 
         $em->remove($db_list);
         $em->flush();
 
-        return new Response('success');
+        return new Response(null, 204, ['Access-Control-Allow-Origin' => '*']);
     }
 
     /**
-     * @Route("/api/appointment/{id}", name="list_calendar_rest")
+     * @Route("/api/listcontent/{id}", name="get_list_content")
      * @Method("GET")
      */
-    public function listRestAction($id)
-    {
-        $calendar = $this->getDoctrine()->getRepository('AppBundle:Calendar')->find($id);
+    public function listContentAction($id) {
+        $em = $this->getDoctrine()->getManager();
+        $db_list = $em->getRepository('AppBundle:TaskList')->find($id);
+
+        if (!$db_list) return TaskController::jsonError('no list with id ' . $id, 404);
+
+        $query = $em->createQuery('SELECT c FROM AppBundle:Task c WHERE c.inList = :id')->setParameter('id', $id);
+        $appointments = $query->getResult();
+
         $serializer = $this->get('jms_serializer');
-        return new Response($serializer->serialize($calendar, 'json'), 200, ['Content-Type' => "application/json", 'Access-Control-Allow-Origin' => '*']);
+        return new Response($serializer->serialize($appointments, 'json'), 200, ['Content-Type' => "application/json", 'Access-Control-Allow-Origin' => '*']);
     }
 }
